syntax = "proto3";

package com.udit.grpc;

option java_multiple_files = true;
option java_package = "com.udit.gen.proto";


// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string reply = 1;
}